platform-engineering/base/engine/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: engine
  namespace: sasya-chikitsa
  labels:
    app: engine
    app.kubernetes.io/component: engine
    app.kubernetes.io/instance: engine
    app.kubernetes.io/name: engine
    app.kubernetes.io/part-of: engine
    app.openshift.io/runtime-version: v1
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  # host: engine-sasya-chikitsa.apps.cluster-mx6z7.mx6z7.sandbox5315.opentlc.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: engine
    weight: 100
  wildcardPolicy: None
